# ocular

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  mainpage.dox  manifest.xml  setup.bash  setup.sh  setup.zsh
TFG/: manifest.xml
TFG/launch/: TFG.launch
TFG/msg/: HandImage.msg  HandPointCloud.msg
code/demos/: demo1.xoj
code/demos/OPENCV/opencv_c++/src/apps/: CMakeLists.txt  no_background.cpp
code/demos/opencv_c++/: CMakeLists.txt
code/demos/opencv_c++/src/: CMakeLists.txt  main.cpp
code/demos/opencv_c++/src/apps/: CMakeLists.txt  flann.cpp  images_matching.cpp  main.cpp  no_background.cpp  static_matching.cpp  templates.cpp
code/demos/opencv_c++/src/libraries/: CMakeLists.txt  functions.cpp  functions.h
code/demos/opencv_c++/src/libraries/ORB/: CMakeLists.txt  descriptors.cpp  descriptors.h
code/learning/: opencv_summary.xoj
code/learning/PCL/tutorials/BASICS/reading_pcd/: CMakeLists.txt  pcd_read.cpp
code/learning/PCL/tutorials/filters/statistical_outlier_removal/: CMakeLists.txt  main.cpp
data/topic_benchmark/: topic_benchmark.sh
diagrams/: sequence.dia
diagrams/images/: uc_feature_extractor.eps
doc/diagrams/: classes.dia  flowcharts.dia  sequence.dia  uc_converter.dia  uc_data_parser.dia  uc_display.dia  uc_event_handler.dia  uc_feature_extractor.dia  uc_learner.dia  uc_recognizer.dia  uc_roi_segmenter.dia  use_case.dia
doc/gantt_diag/: TFG01(HOLIDAYS_CHANGED).gan  TFG02(OPENCV_DEMO_CHANGED).gan  TFG03(ROS_PCL_DEMO_CHANGED).gan  TFG05(2013_11_6).gan  TFG06(2013_11_11).gan
doc/requisites/: classes.dia  flowcharts.dia  requisites.tex  requisites.xoj  requisites_document.xoj  use_case.dia  useful_info.xoj
doc/thesis/: acknowledgments.tex  appendix.tex  bibliography.tex  compile.sh  discussion.tex  front.tex  intro.tex  methods.tex  opencv.tex  state_of_the_art.tex  tfg.bib  thesis.tex
documentation/gantt_diag/: TFG01(HOLIDAYS_CHANGED).gan  TFG04(2013_10_15).gan
gantt_diag/: TFG.gan  TFG06(2013_11_11).gan
launch/: TFG.launch  ocular.launch  topic_benchmark.sh
minutes_of_meeting/2013_3_13/: 13_3.tex
minutes_of_meeting/template/: template.tex
msg/: Features2D.msg  HandLoc.msg  HandLocPx.msg  LearningFinished.msg  RecognizedObject.msg  SystemOutput.msg
old_docs/diagrams/: flowchart1.dia  flowchart2.dia  flowchart3.dia  flowcharts.dia  kinect_data.dia  node_event.dia  node_fe2d.dia  node_fe3d.dia  node_lr.dia  node_output.dia  node_pi_tracker.dia  node_roi2d.dia  node_roi3d.dia  nodes.dia  sequence.dia  sequence_diagram.dia  uc_converter.dia  uc_display.dia  uc_event_handler.dia  uc_feature_extractor_2d.dia  uc_feature_extractor_3d.dia  uc_learner_recognizer.dia  uc_roi_segmenter.dia  uc_roi_segmenter_2d.dia  uc_roi_segmenter_3d.dia  uc_system_output.dia
old_docs/gantt/: TFG05(2013_11_6).gan  final.gan
old_docs/requisites/: requisites.tex
pi_tracker/launch/: my_launch.launch
pi_tracker/params/: SamplesConfigNewOpenNI.xml
pi_tracker/src/: skeleton_tracker.cpp
sandbox/TFG/: CMakeLists.txt  mainpage.dox  manifest.xml
sandbox/TFG/action/: Learn.action
sandbox/TFG/data/algorithms/2D/: 4.yml
sandbox/TFG/data/path/: path_finder.txt
sandbox/TFG/launch/: TFG.launch
sandbox/TFG/msg/: EventHandler.msg  HandImage.msg  HandLocPx.msg  HandPointCloud.msg  LearnAction.msg  LearnActionFeedback.msg  LearnActionGoal.msg  LearnActionResult.msg  LearnFeedback.msg  LearnGoal.msg  LearnResult.msg
sandbox/TFG/msg_gen/cpp/include/TFG/: Features2D.h  HandImage.h  HandLoc.h  HandLocPx.h  HandPointCloud.h
sandbox/TFG/msg_gen/lisp/: HandImage.lisp  HandLoc.lisp  HandLocPx.lisp  HandPointCloud.lisp  TFG-msg.asd  _package.lisp  _package_HandLoc.lisp  _package_HandLocPx.lisp
sandbox/TFG/src/TFG/msg/: _Features2D.py  _HandImage.py  _HandLoc.py  _HandLocPx.py  _HandPointCloud.py  __init__.py
sandbox/TFG/src/apps/: action_client.cpp  action_server.cpp  converter.cpp  event_handler.cpp  featureextractor2D.cpp  featureextractor3D.cpp  image_view.cpp  learner.cpp  main.cpp  path_finder.cpp  recognizer.cpp  roi_segmenter.cpp  roi_segmenter2D.cpp  roi_segmenter3D.cpp
sandbox/TFG/src/libraries/: converter.cpp  converter.h  dataparser.cpp  dataparser.h  display.cpp  display.h  featureextractor.cpp  featureextractor.h  featureextractor2D.cpp  featureextractor2D.h  featureextractor3D.cpp  featureextractor3D.h  matcher.h  roisegmenter.cpp  roisegmenter.h  roisegmenter2D.cpp  roisegmenter2D.h  roisegmenter3D.cpp  roisegmenter3D.h  trainer.cpp  trainer.h  trainermatcher.h
sandbox/TFG/src/libraries/libraries/: algorithm2D.cpp  algorithm2D.h  algorithm3D.cpp  algorithm3D.h  converter.cpp  converter.h  dataparser.cpp  dataparser.h  display.cpp  eventhandler.cpp  eventhandler.h  featureextractor.cpp  featureextractor.h  featureextractor2D.cpp  featureextractor2D.h  featureextractor3D.cpp  featureextractor3D.h  function.cpp  function.h  matcher.cpp  matcher.h  roisegmenter2D.cpp  roisegmenter2D.h  roisegmenter3D.cpp  roisegmenter3D.h  trainer.cpp  trainer.h  trainermatcher.cpp  trainermatcher.h  trigger.cpp  trigger.h
sandbox/TFG/src/libraries/libraries/other/: featureextractor3D.cpp  featureextractor3D.h
sandbox/TFG/src/libraries/nodes/: ConverterNode.cpp  ConverterNode.h  EventHandlerNode.cpp  EventHandlerNode.h  FeatureExtractor2DNode.cpp  FeatureExtractor2DNode.h  FeatureExtractor3DNode.cpp  FeatureExtractor3DNode.h  LearnerRecognizerNode.cpp  LearnerRecognizerNode.h  RecognizerNode.cpp  RecognizerNode.h  RoiSegmenter2DNode.cpp  RoiSegmenter2DNode.h  RoiSegmenter3DNode.cpp  RoiSegmenter3DNode.h  TrainerNode.cpp  TrainerNode.h
sandbox/TFG/src/tests/: Algorithm2DTest.cpp  Algorithm3DTest.cpp  ConverterTest.cpp  DataParserTest.cpp  EventHandlerTest.cpp  FeatureExtractor2DTest.cpp  FeatureExtractor3DTest.cpp  RoiSegmenter2DTest.cpp  RoiSegmenter3DTest.cpp  dummy.cpp
sandbox/pi_tracker/: CMakeLists.txt  mainpage.dox  (+2 more)
thesis/: abstract.tex  appendix.tex  bibliography.tex  conclusions.tex  discussion.tex  front.tex  intro.tex  methods.tex  requisites.tex  results.tex  state_of_the_art.tex  system_description.tex  tfg.bib  thesis.tex
(+354 files in other folders)
