#CMAKEFILES: MAIN 

cmake_minimum_required(VERSION 2.8)

project(OpenCV_Demo)

FIND_PACKAGE( OpenCV REQUIRED )


set (RBCP_TRUNK_DIR "${PROJECT_SOURCE_DIR}")

set(RBCP_SRC_DIR "${RBCP_TRUNK_DIR}/src")
set(RBCP_LIB_DIR "${RBCP_TRUNK_DIR}/lib")
set(RBCP_BIN_DIR "${RBCP_TRUNK_DIR}/bin")

set(LIBRARY_OUTPUT_PATH ${RBCP_LIB_DIR})
set(EXECUTABLE_OUTPUT_PATH ${RBCP_BIN_DIR})

add_subdirectory (src)


